Fix to (collapsed) title not at top of page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -249,10 +249,10 @@ $colHighlight   : $color-quartenary;
 	float:none;
 	padding:6px;
 	margin: 6px 0px;
+	vertical-align:top;
 }
 
 #title-small {
-	float:top;
 	display:none;
 	padding: 7px 40px;
 	margin:7px;
